--- a/src/libs/WixToolset.Data/WixDataStrings.resx
+++ b/src/libs/WixToolset.Data/WixDataStrings.resx
@@ -180,9 +180,6 @@
   <data name="EXP_ISchemaElementDoesnotImplementICreateChildren" xml:space="preserve">
     <value>ISchemaElement with name {0} does not implement ICreateChildren.</value>
   </data>
-  <data name="EXP_ISchemaElementDoesnotImplementICreateChildren" xml:space="preserve">
-    <value>ISchemaElement with name {0} does not implement ICreateChildren.</value>
-  </data>
   <data name="EXP_ISchemaElementDoesnotImplementISetAttribute" xml:space="preserve">
     <value>ISchemaElement with name {0} does not implement ISetAttributes.</value>
   </data>
@@ -203,5 +200,8 @@
   </data>
   <data name="EXP_ElementMustBeChoiceItemOrSequenceItem" xml:space="preserve">
     <value>Element of type {0} found in enumerator. Must be ChoiceItem or SequenceItem.</value>
+  </data>
+  <data name="EXP_ReadOnlyCollection" xml:space="preserve">
+    <value>The collection is read-only and cannot be modified.</value>
   </data>
 </root>
